--- a/src/BlogBundle/Resources/views/base.html.twig
+++ b/src/BlogBundle/Resources/views/base.html.twig
@@ -9,10 +9,12 @@
     <body>
         <ul>
             <li><a href="/">Home</a></li>
-
             <li><a href="{{ path('article_index') }}">Article</a></li>
-            <li><a href="{{ path('user_manager') }}">Users</a></li>
-            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            {% if is_granted('ROLE_ADMIN') %}
+                <li><a href="{{ path('user_manager') }}">Users</a></li>
+            {% endif %}
+            {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                <li><a href="{{ path('my_profile',{'id':app.user.id}) }}">My profile</a></li>
                 <li><a href="{{ path('logout') }}">Logout</a></li>
             {% else %}
                 <li><a href="{{ path('login') }}">Login</a></li>
