Add more functionality !

--- a/src/AppBundle/Resources/views/security/forgot_password.html.twig
+++ b/src/AppBundle/Resources/views/security/forgot_password.html.twig
@@ -1,8 +1,7 @@
 {% extends '@basic/base.html.twig' %}
 
 {% block body %}
-
+    <h2>Forgot password</h2>
+    <p>Please insert your username and email !</p>
     {{ form(form) }}
-
-
 {% endblock %}
