--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <p>Hello word
-        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
             {{ app.user.username }}</p>
         {% endif %}
 {% endblock %}
