--- a/src/AppBundle/Resources/views/security/register.html.twig
+++ b/src/AppBundle/Resources/views/security/register.html.twig
@@ -1,23 +1,26 @@
 {% extends '@basic/base.html.twig' %}
+{% block carousel %}
 
+{% endblock %}
 {% block body %}
     <div class="span9">
         <ul class="breadcrumb">
-            <li><a href="index.html">Home</a> <span class="divider">/</span></li>
+            <li><a href="{{ path('home_page') }}">Home</a> <span class="divider">/</span></li>
             <li class="active">Registration</li>
         </ul>
         <h3> Registration</h3>
         <div class="well">
 
             <h4>Your personal information</h4>
-            {% form_theme form 'bootstrap_3_layout.html.twig' %}
-
+            {% form_theme form with ['bootstrap_3_horizontal_layout.html.twig','@App/forms/customize_form.html.twig'] %}
 
                 {{ form_start(form) }}
-
-
-                    {{ form_widget(form) }}
+                 
                 {{ form_end(form) }}
+
+
+
+
 
 
         </div>
