--- a/src/AppBundle/Resources/views/theme/carousel.html.twig
+++ b/src/AppBundle/Resources/views/theme/carousel.html.twig
@@ -3,7 +3,7 @@
         <div class="carousel-inner">
             <div class="item active">
                 <div class="container">
-                    <a href="{{ path('user_register') }}"><img style="width:100%" src="themes/images/carousel/1.png" alt="special offers"/></a>
+                    <a href="{{ path('user_register') }}"><img style="width:100%" src="{{ asset('themes/images/carousel/1.png') }}" alt="special offers"/></a>
                     <div class="carousel-caption">
                         <h4>Second Thumbnail label</h4>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -12,7 +12,7 @@
             </div>
             <div class="item">
                 <div class="container">
-                    <a href="{{ path('user_register') }}"><img style="width:100%" src="themes/images/carousel/2.png" alt=""/></a>
+                    <a href="{{ path('user_register') }}"><img style="width:100%" src="{{ asset('themes/images/carousel/2.png') }}" alt=""/></a>
                     <div class="carousel-caption">
                         <h4>Second Thumbnail label</h4>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -21,7 +21,7 @@
             </div>
             <div class="item">
                 <div class="container">
-                    <a href="{{ path('user_register') }}"><img src="themes/images/carousel/3.png" alt=""/></a>
+                    <a href="{{ path('user_register') }}"><img src="{{ asset('themes/images/carousel/3.png') }}" alt=""/></a>
                     <div class="carousel-caption">
                         <h4>Second Thumbnail label</h4>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
