--- a/src/AppBundle/Resources/views/security/register.html.twig
+++ b/src/AppBundle/Resources/views/security/register.html.twig
@@ -12,10 +12,17 @@
         <div class="well">
 
             <h4>Your personal information</h4>
-            {% form_theme form with ['bootstrap_3_horizontal_layout.html.twig','@App/forms/customize_form.html.twig'] %}
+            {% form_theme form with '@App/forms/customize_form.html.twig' %}
 
                 {{ form_start(form) }}
-                 
+                    {{ form_row(form.username,{'help':' Username must be 3 or more symbols !'}) }}
+                    {{ form_row(form.fullName) }}
+                    {{ form_row(form.email) }}
+                    {{ form_row(form.plainPassword) }}
+                    
+                    <p><sup>*</sup> Required field</p>
+
+                    {{ form_row(form.submit, { 'label': 'Register !' }) }}
                 {{ form_end(form) }}
 
 
