--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -74,30 +74,36 @@
                     <li class=""><a href="normal.html">Delivery</a></li>
                     <li class=""><a href="contact.html">Contact</a></li>
                     <li class="">
-                        <a href="{{ path('login') }}" role="button" data-toggle="modal" style="padding-right:0"><span class="btn btn-large btn-success">Login</span></a>
+                        <a href="#login" role="button" data-toggle="modal" style="padding-right:0"><span class="btn btn-large btn-success">Login</span></a>
+
                         <div id="login" class="modal hide fade in" tabindex="-1" role="dialog" aria-labelledby="login" aria-hidden="false" >
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                                 <h3>Login Block</h3>
                             </div>
                             <div class="modal-body">
-                                <form class="form-horizontal loginFrm">
+                                <form action="{{ path('login') }}" method="post" class="form-horizontal loginFrm">
                                     <div class="control-group">
-                                        <input type="text" id="inputEmail" placeholder="Email">
+                                        <label for="username">Username:</label>
+                                        <input type="text" id="username" name="_username"  />
                                     </div>
                                     <div class="control-group">
-                                        <input type="password" id="inputPassword" placeholder="Password">
+                                        <label for="password">Password:</label>
+                                        <input type="password" id="password" name="_password" /><br/>
                                     </div>
+                                    <input type="hidden" name="_csrf_token"
+                                           value="{{ csrf_token('authenticate') }}"
+                                    >
                                     <div class="control-group">
-                                        <label class="checkbox">
-                                            <input type="checkbox"> Remember me
-                                        </label>
+                                        <input type="checkbox" id="remember_me" name="_remember_me" checked />
+                                        <label for="remember_me">Remember me !</label><br/>
                                     </div>
+                                    <input type="submit" value="Sign in" class="btn btn-success"/>
+                                    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
                                 </form>
-                                <button type="submit" class="btn btn-success">Sign in</button>
-                                <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
                             </div>
                         </div>
+
                     </li>
                 </ul>
             </div>
