--- a/src/AppBundle/Resources/views/security/login.html.twig
+++ b/src/AppBundle/Resources/views/security/login.html.twig
@@ -4,7 +4,7 @@
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <form action="{{ path('login') }}" method="post">
+    <form action="{{ path('login') }}" method="post" name="form_login">
         <label for="username">Username:</label>
         <input type="text" id="username" name="_username" value="{{ last_username }}" /><br/>
 
