--- a/src/AppBundle/Resources/views/security/register.html.twig
+++ b/src/AppBundle/Resources/views/security/register.html.twig
@@ -12,7 +12,7 @@
         <div class="well">
 
             <h4>Your personal information</h4>
-            {% form_theme form with '@App/forms/customize_form.html.twig' %}
+            {% form_theme form with 'forms/customize_form.html.twig' %}
 
                 {{ form_start(form) }}
                     {{ form_row(form.username,{'help':' Username must be 3 or more symbols !'}) }}
