--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -2,36 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Bootshop online Shopping cart</title>
+    <title>Online Shop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!--Less styles -->
-    <!-- Other Less css file //different less files has different color scheam
-     <link rel="stylesheet/less" type="text/css" href="themes/less/simplex.less">
-     <link rel="stylesheet/less" type="text/css" href="themes/less/classified.less">
-     <link rel="stylesheet/less" type="text/css" href="themes/less/amelia.less">  MOVE DOWN TO activate
-     -->
-    <!--<link rel="stylesheet/less" type="text/css" href="themes/less/bootshop.less">
-    <script src="themes/js/less.js" type="text/javascript"></script> -->
 
-    <!-- Bootstrap style -->
-    <link id="callCss" rel="stylesheet" href="{{ asset('themes/bootshop/bootstrap.min.css') }}" media="screen"/>
-    <link href="{{ asset('themes/css/base.css') }}" rel="stylesheet" media="screen"/>
-    <!-- Bootstrap style responsive -->
-    <link href="{{ asset('themes/css/bootstrap-responsive.min.css') }}" rel="stylesheet"/>
-    <link href="{{ asset('themes/css/font-awesome.css') }}" rel="stylesheet" type="text/css">
-    <!-- Google-code-prettify -->
-    <link href="{{ asset('themes/js/google-code-prettify/prettify.css') }}" rel="stylesheet"/>
-    <!-- fav and touch icons -->
+
     <link rel="shortcut icon" href="{{ asset('themes/images/ico/favicon.ico') }}">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ asset('themes/images/ico/apple-touch-icon-144-precomposed.png') }}">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ asset('themes/images/ico/apple-touch-icon-114-precomposed.png') }}">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ asset('themes/images/ico/apple-touch-icon-72-precomposed.png') }}">
-    <link rel="apple-touch-icon-precomposed" href="{{ asset('themes/images/ico/apple-touch-icon-57-precomposed.png') }}">
-    <style type="text/css" id="enject"></style>
+
 </head>
 <body>
+<div class="container">
+    {% if app.session.get('cart') is defined %}
+         <p>{{ dump(app.session.get('cart')) }}</p>
+    {% endif %}
+</div>
 <div id="header">
     <div class="container">
         <div id="welcomeLine" class="row">
@@ -40,13 +23,16 @@
             {% endif %}
             <div class="span6">
                 <div class="pull-right">
-                    <a href="product_summary.html"><span class="">Fr</span></a>
-                    <a href="product_summary.html"><span class="">Es</span></a>
-                    <span class="btn btn-mini">En</span>
-                    <a href="product_summary.html"><span>&pound;</span></a>
-                    <span class="btn btn-mini">$155.00</span>
-                    <a href="product_summary.html"><span class="">$</span></a>
-                    <a href="product_summary.html"><span class="btn btn-mini btn-primary"><i class="icon-shopping-cart icon-white"></i> [ 3 ] Itemes in your cart </span> </a>
+
+                    <a href="{{ path('personal_cart') }}">
+                            {% if app.session.get('cart')|length >1 %}
+                                <span class="btn btn-mini btn-primary"><i class="icon-shopping-cart icon-white"></i>
+                                [ {{ app.session.get('cart')|length}} ] Itemes in your cart </span>
+                            {% else %}
+                                <span class="btn btn-mini btn-primary"><i class="icon-shopping-cart icon-white"></i>
+                                [ {{ app.session.get('cart')|length }} ] Item in your cart </span>
+                            {% endif %}
+                    </a>
                 </div>
             </div>
         </div>
@@ -59,18 +45,7 @@
             </a>
             <div class="navbar-inner">
                 <a class="brand" href="{{ path('home_page') }}"><img src="{{ asset('themes/images/logo.png') }}" alt="Bootsshop"/></a>
-                <form class="form-inline navbar-search" method="post" action="products.html" >
-                    <input id="srchFld" class="srchTxt" type="text" />
-                    <select class="srchTxt">
-                        <option>All</option>
-                        <option>CLOTHES </option>
-                        <option>FOOD AND BEVERAGES </option>
-                        <option>HEALTH & BEAUTY </option>
-                        <option>SPORTS & LEISURE </option>
-                        <option>BOOKS & ENTERTAINMENTS </option>
-                    </select>
-                    <button type="submit" id="submitButton" class="btn btn-primary">Go</button>
-                </form>
+
                 <ul id="topMenu" class="nav pull-right">
                     {% if is_granted('ROLE_ADMIN') %}
                         <li><a href="{{ path('user_manager') }}">Users</a></li>
@@ -81,41 +56,8 @@
                         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                             <a href="{{ path('logout') }}" ><span class="btn btn-large btn-success">Logout</span></a>
                         {% else %}
-                            <a href="#login" role="button" data-toggle="modal" style="padding-right:0"><span class="btn btn-large btn-success">Login</span></a>
-                            <div id="login" class="modal hide fade in" tabindex="-1" role="dialog" aria-labelledby="login" aria-hidden="false" >
-                                <div class="modal-dialog">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                        <h3>Login Block</h3>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form action="{{ path('login') }}" method="post" class="form-horizontal loginFrm">
-                                            <div class="control-group">
-                                                {% if error %}
-                                                    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                                                {% endif %}
-                                                <label for="username">Username:</label>
-                                                <input type="text" id="username" name="_username"  />
-                                            </div>
-                                            <div class="control-group">
-                                                <label for="password">Password:</label>
-                                                <input type="password" id="password" name="_password" /><br/>
-                                            </div>
-                                            <input type="hidden" name="_csrf_token"
-                                                   value="{{ csrf_token('authenticate') }}"
-                                            >
-                                            <div class="control-group">
-                                                <input type="checkbox" id="remember_me" name="_remember_me" checked />
-                                                <label for="remember_me">Remember me !</label><br/>
-                                            </div>
-                                            <input type="submit" value="Sign in" class="btn btn-success"/>
-                                            <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
+                            <a href="{{ path('login') }}" role="button" data-toggle="modal" style="padding-right:0"><span class="btn btn-large btn-success">Login</span></a>
 
-                            <script src="{{ asset('bundles/sideclickbootstrapmodal/js/sideclick-bootstrap-modal.js') }}"></script>
                         {% endif %}
                     </li>
                 </ul>
@@ -132,7 +74,7 @@
         <div class="row">
 
             {% block sidebar %}
-                {% include '@App/theme/sidebar.html.twig' %}
+                
             {% endblock %}
 
             {% block body %}
@@ -150,7 +92,7 @@
                 {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                     <h5>ACCOUNT</h5>
                     <a href="{{ path('my_profile',{'id':app.user.id}) }}">YOUR ACCOUNT</a>
-                    <a href="login.html">PERSONAL INFORMATION</a>
+                    <a href="{{ path('user_register') }}">REGISTER</a>
                     <a href="login.html">ADDRESSES</a>
                     <a href="login.html">DISCOUNT</a>
                     <a href="login.html">ORDER HISTORY</a>
@@ -166,8 +108,8 @@
             </div>
             <div class="span3">
                 <h5>OUR OFFERS</h5>
-                <a href="#">NEW PRODUCTS</a>
-                <a href="#">TOP SELLERS</a>
+                <a href="{{ path('create_product') }}">NEW PRODUCTS</a>
+                <a href="{{ path('product_list') }}">All Products</a>
                 <a href="special_offer.html">SPECIAL OFFERS</a>
                 <a href="#">MANUFACTURERS</a>
                 <a href="#">SUPPLIERS</a>
@@ -183,12 +125,6 @@
     </div><!-- Container End -->
 </div>
 <!-- Placed at the end of the document so the pages load faster ============================================= -->
-<script src="{{ asset('themes/js/jquery.js') }}" type="text/javascript"></script>
-<script src="{{ asset('themes/js/bootstrap.min.js') }}" type="text/javascript"></script>
-<script src="{{ asset('themes/js/google-code-prettify/prettify.js') }}"></script>
-
-<script src="{{ asset('themes/js/bootshop.js') }}"></script>
-<script src="{{ asset('themes/js/jquery.lightbox-0.5.js') }}"></script>
 
 <!-- Themes switcher section ============================================================================================= -->
 
