Add more functionality !

--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -112,9 +112,9 @@
             </div>
             <div class="span3">
                 <h5>OUR OFFERS</h5>
-                <a href="{{ path('create_product') }}">NEW PRODUCTS</a>
+                <a href="{{ path('create_product') }}">New Products</a>
                 <a href="{{ path('product_list') }}">All Products</a>
-                <a href="special_offer.html">SPECIAL OFFERS</a>
+                <a href="{{ path('new_products_users') }}">New Product To User</a>
                 <a href="#">MANUFACTURERS</a>
                 <a href="#">SUPPLIERS</a>
             </div>
