--- a/src/ShopBundle/Resources/views/product/product_details.html.twig
+++ b/src/ShopBundle/Resources/views/product/product_details.html.twig
@@ -2,7 +2,6 @@
 {% extends '@App/base.html.twig' %}
 
 {% block body %}
-
     <div class="span9">
         <ul class="breadcrumb">
             <li><a href="index.html">Home</a> <span class="divider">/</span></li>
@@ -63,6 +62,8 @@
             <div class="span6">
                 <h3>{{ product.title }}</h3>
                 <small>{{ product.description }}</small>
+                <p>{{ product.price }} &euro;</p>
+                <p>{{ product.promotion.discount }} %</p>
                 <hr class="soft"/>
                 {{ form(cart_form) }}
                 <hr class="soft"/>
