--- a/src/ShopBundle/Resources/views/promotion/new.html.twig
+++ b/src/ShopBundle/Resources/views/promotion/new.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
     <h1>Promotion creation</h1>
 
+    {% form_theme form with 'forms/customize_form.html.twig' %}
     {{ form_start(form) }}
         {{ form_widget(form) }}
         <input type="submit" value="Create" />
