Add more functionality and fix bugs

--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -112,9 +112,7 @@
             </div>
             <div class="span3">
                 <h5>OUR OFFERS</h5>
-                <a href="{{ path('create_product') }}">New Products</a>
-                <a href="{{ path('product_list') }}">All Products</a>
-                <a href="{{ path('new_products_users') }}">New Product To User</a>
+                <a href="{{ path('new_products_users') }}">New Product</a>
                 <a href="#">MANUFACTURERS</a>
                 <a href="#">SUPPLIERS</a>
             </div>
@@ -131,8 +129,5 @@
 <!-- Placed at the end of the document so the pages load faster ============================================= -->
 
 <!-- Themes switcher section ============================================================================================= -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
