--- a/src/ShopBundle/Resources/views/order/create_order.html.twig
+++ b/src/ShopBundle/Resources/views/order/create_order.html.twig
@@ -1,7 +1,6 @@
 {% extends '@App/base.html.twig' %}
 
 {% block body %}
-    {{ dump(user) }}
     <h1>Add order </h1>
     {% if not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
         <p>
@@ -15,7 +14,7 @@
         <p>===========================================================</p>
         {% for product in app.session.get('cart') %}
             {% if product.id|length %}
-                <p>Product name :{{ product.title }}
+                <p>Product name :{{product.product.title }}
                     <span><a href="{{ path('session_clear',{'id':product.id}) }}"> </a></span>
                 </p>
                 <p>Price: {{ product.price }}</p>
@@ -23,7 +22,7 @@
                 {% if product.promotion is not null %}
                     <p>Discount : <strong>{{ product.promotion.discount }} %</strong>
                 {% endif %}
-                Product total :<strong> {{ product.subtotal|number_format(2,'.',' ') }}</strong>
+                Product total :<strong> {{ product.product.subtotal|number_format(2,'.',' ') }}</strong>
                 </p>
             {% endif %}
             <p>========================================================</p>
