--- a/src/ShopBundle/Resources/views/product_users/new_product.html.twig
+++ b/src/ShopBundle/Resources/views/product_users/new_product.html.twig
@@ -6,6 +6,7 @@
         {{ form_row(form.product) }}
         {{ form_row(form.quantity) }}
         {{ form_row(form.price) }}
+        {{ form_row(form.promotion) }}
         <input type="submit" name="Save">
     {{ form_end(form) }}
 
