--- a/src/ShopBundle/Resources/views/product_users/show.html.twig
+++ b/src/ShopBundle/Resources/views/product_users/show.html.twig
@@ -6,12 +6,21 @@
         <div>
                 <p>{{ product.quantity }} items in stock.</p>
                 <p>{{ product.price }}</p>
-                <p>{{ product.promotion.discount }} %</p>
+                {% if product.promotion %}
+                    <p>{{ product.promotion.discount }} %</p>
+                {% endif %}
             <form method="post" name="shop_bundle_product_users_type" >
+                {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                    {{ form_row(form.hasSell) }}
+                {% else %}
+                    {{ form_widget(form.hasSell,{'attr':{'hidden':'hidden'}}) }}
+                {% endif %}
                  <input type="number" id="shop_bundle_product_users_type_quantity"
                         name="shop_bundle_product_users_type[quantity]" required="required"
                         value="1" min="1" max="{{ product.quantity }}"/>
+
                 {{ form_row(form.price) }}
+
                 {{ form_row(form._token) }}
                 <input type="submit" value="Buy now !"/>
             </form>
