--- a/src/ShopBundle/Resources/views/product_users/edit_product.html.twig
+++ b/src/ShopBundle/Resources/views/product_users/edit_product.html.twig
@@ -4,7 +4,10 @@
     <h2>Edit Product</h2>
     {{ form_start(form) }}
         {{ form_widget(form) }}
-    <input type="submit" name="Save">
+
+        {{ form_row(form.product.category,{'label':'ddfffd'}) }}
+        
+    <input type="submit" value="Edit :)">
     {{ form_end(form) }}
 
 {% endblock %}
