--- a/src/ShopBundle/Resources/views/product_users/product_list.html.twig
+++ b/src/ShopBundle/Resources/views/product_users/product_list.html.twig
@@ -15,7 +15,8 @@
             {% endif %}
             </td>
             <td>{{ product.product.category.name }}</td>
-            <td><a href="{{ path('edit_product',{'id':product.id}) }}">Edit !</a> <a href="#">Delete !</a></td>
+            <td><a href="{{ path('edit_product',{'id':product.id}) }}">Edit !</a>
+                <a href="{{ path('delete_product',{'id':product.id}) }}">Delete !</a></td>
         </tr>
     {% endfor %}
     </table>
@@ -32,7 +33,8 @@
                 {% endif %}
             <td>{{ product.product.category.name }}</td>
             <td>{{ product.user.username }}</td>
-            <td><a href="{{ path('edit_product',{'id':product.id}) }}">Edit !</a> <a href="#">Delete !</a></td>
+            <td><a href="{{ path('edit_product',{'id':product.id}) }}">Edit !</a>
+                <a href="{{ path('delete_product',{'id':product.id}) }}">Delete !</a></td>
         </tr>
     {% endfor %}
     </table>
